--- a/labenu-back-end/Servicos-no-Backend/package.json
+++ b/labenu-back-end/Servicos-no-Backend/package.json
@@ -1,21 +1,31 @@
 {
-   "scripts": {
-      "start": "tsc && node --inspect ./build/index.js",
-      "dev-start": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
-      "migrations": "tsnd ./src/data/migrations.ts"
-   },
-   "devDependencies": {
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.14",
-      "@types/knex": "^0.16.1",
-      "@types/mysql": "^2.15.21",
-      "@types/node": "^14.18.34",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "knex": "^2.3.0",
-      "mysql": "^2.18.1",
-      "ts-node-dev": "^1.1.8",
-      "typescript": "^4.9.4"
-   }
+  "name": "servicos-no-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "dev": "tsnd src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/knex": "^0.16.1",
+    "@types/mysql": "^2.15.21",
+    "@types/node": "^18.11.12",
+    "axios": "^1.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  }
 }
