--- a/back-end/To Do List/package.json
+++ b/back-end/To Do List/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./build/index.js",
     "build": "tsc",
-    "dev": "tsnd src/index.ts"
+    "dev": "tsnd src/index.ts",
+    "migrations": "tsc && node ./build/database/migrations.js"
   },
   "keywords": [],
   "author": "wagner-guimaraes",
