--- a/back-end/To Do List/package.json
+++ b/back-end/To Do List/package.json
@@ -19,12 +19,14 @@
     "@types/knex": "^0.16.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.12",
+    "@types/uuid": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   }
 }
