--- a/back-end/LabECommerce/package.json
+++ b/back-end/LabECommerce/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./build/index.js",
     "build": "tsc",
-    "dev": "tsnd src/index.ts"
+    "dev": "tsnd src/index.ts",
+    "migrations": "tsc && node ./build/database/migrations.js"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +19,14 @@
     "@types/knex": "^0.16.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.13",
+    "@types/uuid": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   }
 }
