--- a/labenu-back-end/Servicos-no-Backend/package.json
+++ b/labenu-back-end/Servicos-no-Backend/package.json
@@ -19,12 +19,14 @@
     "@types/knex": "^0.16.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.12",
+    "@types/nodemailer": "^6.4.6",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
