--- a/refazendo-projetos/to-do-list/package.json
+++ b/refazendo-projetos/to-do-list/package.json
@@ -1,7 +1,6 @@
 {
   "name": "to-do-list",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,22 +10,25 @@
     "migrations": "tsc && node ./build/database/migrations.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "wagner-guimaraes",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.15",
     "@types/knex": "^0.16.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.15",
+    "@types/nodemailer": "^6.4.6",
     "@types/uuid": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
-  }
+  },
+  "description": ""
 }
